--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "axios": "^1.7.9",
+    "json-server": "^0.17.4",
     "nuxt": "^3.15.4",
+    "uuid": "^11.0.5",
     "vue": "latest",
     "vue-router": "latest"
   }
