--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "json-server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
