--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@pinia/nuxt": "^0.9.0",
     "axios": "^1.7.9",
     "json-server": "^0.17.4",
     "nuxt": "^3.15.4",
+    "pinia": "^2.3.1",
     "uuid": "^11.0.5",
     "vue": "latest",
     "vue-router": "latest"
